--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -14,7 +14,7 @@ p {
 	position: relative;
 	display: flex;
 	justify-content: center;
-	width: 100vw;
+	/* width: 100%; */
 	z-index: 1;
 }
 
@@ -138,7 +138,8 @@ p {
 }
 
 .List {
-	display: grid;
+	display: flex;
+	flex-direction: column;
 	padding: 10px;
 	margin: 0;
 	column-gap: 10px;
@@ -146,9 +147,8 @@ p {
 }
 @media only screen and (min-width: 600px) {
 	.List.one {
-		width: 400px;
-		grid-auto-flow: column;
-		/* grid-template-rows: repeat(3, 1fr); */
+		width: auto;
+		grid-auto-flow: unset;
 	}
 }
 
